# cappuccino2

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  <Plug>_<Plug>_  CONTRIBUTORS.txt  Dockerfile  LICENSE  Procfile  README.md  README.rst  dbCappuccino.sqlite  dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  env.example  gulpfile.js  local.yml  local_requirements.txt  manage.py  mkdocs.yml  package-lock.json  package.json  production.yml  pyproject.toml  requirements.txt  setup.cfg  test_gestion_pk.py
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
cappuccino2/: __init__.py  conftest.py  urls.py  wsgi.py
cappuccino2/config/: common.py  local.py  production.py
cappuccino2/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
cappuccino2/horario/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cappuccino2/horario/management/commands/: horario.py  horarioPlano.py  horario_plano.py
cappuccino2/horario/migrations/: 0001_initial.py  0002_alter_actualización_options_and_more.py  0002_auto_20190224_0317.py  0002_auto_20190919_2235.py  0002_carrera_fecha.py  0002_gestión_and_more.py  0003_alter_grupo_ayudante.py  0003_alter_horario_día_and_more.py  0003_auto_20170207_1636.py  0004_alter_grupo_ayudante_alter_grupo_código_and_more.py  0004_auto_20170207_1957.py  0005_alter_actualización_id_alter_grupo_código.py  0005_auto_20170207_2150.py  0006_alter_grupo_código.py  0006_horario_grupo.py  0007_alter_horario_código.py  0007_auto_20170207_2219.py  0008_alter_horario_options_and_more.py  0008_auto_20170224_1443.py  0009_auto_20170228_0858.py  0010_auto_20170302_1059.py
cappuccino2/static/sass/: project.scss
cappuccino2/taskapp/: celery.py
cappuccino2/templates/: base.html
cappuccino2/users/: adapters.py  admin.py  apps.py  models.py  urls.py  views.py
cappuccino2/users/api/: schema.py  serializers.py  views.py
cappuccino2/users/migrations/: 0001_initial.py
cappuccino2/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
cappuccino2/users/tests/api/: test_urls.py  test_views.py
cliente/: README.md  angular.json  package-lock.json  package.json
cliente/src/app/: app.component.html  app.component.styl  app.component.ts  app.module.ts  materia.service.ts  materia.ts
cliente/src/app/horario/: horario.component.html  horario.component.styl  horario.component.ts
cliente/src/app/materias/: materias.component.html  materias.component.ts
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/postgres/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api.py  api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  common.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.md  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
utility/: requirements-jessie.apt  requirements-trusty.apt  requirements-xenial.apt
webpack/: common.config.js
